--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -38,6 +38,10 @@ $warning: $envColorWarning;
 $danger: $envColorDanger;
 $success: $envColorSuccess;
 
+$primaryOne: #007cc3;
+$primaryTwo: #1a1a1a;
+$list1: $primaryOne, $primaryTwo;
+
 // Typography
 $body-color: $tertiary !default;
 
