--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 // Import app scss
 @import "global.scss";
 @import "utilities.scss";
+@import "mixins.scss";
 
 // Custom Components
 @import "dropdowns.scss";
