Queue Length on dash + Colors

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -39,7 +39,7 @@ $danger: $envColorDanger;
 $success: $envColorSuccess;
 
 $primaryOne: #007cc3;
-$primaryTwo: #1a1a1a;
+$primaryTwo: #92d0f4;
 $list1: $primaryOne, $primaryTwo;
 
 // Typography
