--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -38,8 +38,8 @@ $warning: $envColorWarning;
 $danger: $envColorDanger;
 $success: $envColorSuccess;
 
-$primaryOne: #007cc3;
-$primaryTwo: #92d0f4;
+$primaryOne: #1770a3;
+$primaryTwo: #055187;
 $list1: $primaryOne, $primaryTwo;
 
 // Typography
